@startuml
title Zuweisungs-Meister - Zustandsdiagramm
hide empty description

[*] --> AppStart
state AppStart : HTML geladen: _ghtml_zuweisungs_meister.html
AppStart --> Initialisierung : Script(s) laden
Initialisierung --> DatenLaden : fetch Konfiguration/Leveldaten
DatenLaden --> Bereit : Daten erfolgreich geladen
DatenLaden --> Fehler : Laden fehlgeschlagen
Bereit --> Spielzyklus : Erste Runde starten

state Spielzyklus {
  [*] --> WarteAufEingabe
  WarteAufEingabe --> Auswertung : Nutzerinteraktion
  Auswertung --> Feedback : Regeln pruefen + Score/HUD aktualisieren
  Feedback --> FortschrittPruefen : Weiter / Auto-Fortschritt
  FortschrittPruefen --> WarteAufEingabe : Weitere Aufgabe offen
  FortschrittPruefen --> Abschluss : Letzte Aufgabe erledigt
}

Abschluss --> Neustart : Neustart ausloesen
Neustart --> Initialisierung : State zuruecksetzen
Abschluss --> [*] : Sitzung verlassen
Fehler --> [*]

note right of Initialisierung
Quelle: databases/Teil02 FIAE/database/Anforderungen, Analyse, Projekt & Prozess/Ticketsystem/zuweisungs_meister/_ghtml_zuweisungs_meister.html
JS: _gjs_zuweisungs_meister.js
fetch: _data/_gg01_zuweisungs_meister.json
Merkmale: neustart, score, fehlerbehandlung
end note
@enduml
